name:                simpleJSON
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/json#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable haskellApi
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       simpleJSON

library
  hs-source-dirs:      src
  exposed-modules:     SimpleJSON,
                       PutJSON,
                       PrettyJSON
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

